works with tomcat 8

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-name=PropertiesConfig
+name=MoneyHolder
 property.filename = logs
 appenders = console, file
 
@@ -21,3 +21,7 @@ logger.file.appenderRef.file.ref = LOGFILE
 rootLogger.level = debug
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
+
+logger.org.springframework.web.servlet.name=org.springframework.web.servlet
+logger.org.springframework.web.servlet.level = debug
+logger.org.springframework.web.servlet.appenderRef.console.ref= Console
