--- a/war/src/main/resources/application.properties
+++ b/war/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/moneyholder
-spring.datasource.username=test
-spring.datasource.password=test
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver=org.h2.Driver
+spring.jpaVendorAdapter.databasePlatform=org.hibernate.dialect.H2Dialect
+
