--- a/war/src/main/resources/log4j2.properties
+++ b/war/src/main/resources/log4j2.properties
@@ -1,27 +1,27 @@
 name=MoneyHolder
 property.filename = logs
-appenders = console, file
+appenders = console
 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c - %msg%n
 
-appender.file.type = File
-appender.file.name = LOGFILE
-appender.file.fileName=${filename}/propertieslogs.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-loggers=file
-logger.file.name=ua.pp.bizon.moneyholder.application
-logger.file.level = debug
-logger.file.appenderRefs = file
-logger.file.appenderRef.file.ref = LOGFILE
-rootLogger.level = debug
+loggers=application, spring
+logger.application.name=ua.pp.bizon.moneyholder.application
+logger.application.level = debug
+logger.application.additivity = false
+logger.application.appenderRefs = file
+logger.application.appenderRef.file.ref = STDOUT
+
+logger.spring.name=org.springframework.web.servlet
+logger.spring.level = debug
+logger.spring.additivity = false
+logger.spring.appenderRefs = file
+logger.spring.appenderRef.file.ref = STDOUT
+
+
+rootLogger.level = info
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
-
-logger.org.springframework.web.servlet.name=org.springframework.web.servlet
-logger.org.springframework.web.servlet.level = debug
-logger.org.springframework.web.servlet.appenderRef.console.ref= Console
