--- a/tests/src/test/resources/log4j2.properties
+++ b/tests/src/test/resources/log4j2.properties
@@ -4,9 +4,9 @@ appenders = console
 appender.console.type = console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c - %msg%n
 
 
-rootLogger.level = all
+rootLogger.level = info
 rootLogger.appenderRefs = STDOUT
 rootLogger.appenderRef.stdout.ref = STDOUT
